--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,11 @@
         "psr-4": { "": "src/" }
     },
     "require": {
+        "symfony/console": "^3.3",
+        "symfony/yaml": "^3.3",
+        "symfony/config": "^3.3",
+        "symfony/dependency-injection": "^3.3",
+        "symfony/event-dispatcher": "^3.3"
     },
     "require-dev": {
         "phpunit/phpunit": "6.2"
